--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "version": "7.1.1"
   },
   "dependencies": {
+    "@waline/client": "3",
     "hexo": "^7.0.0",
     "hexo-generator-archive": "^2.0.0",
     "hexo-generator-category-enhance": "^0.1.6",
